# Homework-1-python-development

./: .env.example  .flake8  .gitignore  README.md  pyproject.toml
src/: count_transactions.py  decorators.py  external_api.py  filter_descriptions.py  generators.py  main.py  masks.py  processing.py  reading_files.py  utils.py  widget.py
tests/: conftest.py  test_modul_count_transactions.py  test_modul_decorators.py  test_modul_external_api.py  test_modul_filter_descriptions.py  test_modul_generators.py  test_modul_masks.py  test_modul_processing.py  test_modul_reading_files.py  test_modul_utils.py  test_modul_widget.py
